--- a/app/src/main/res/layout/activity_profile_manage.xml
+++ b/app/src/main/res/layout/activity_profile_manage.xml
@@ -44,7 +44,7 @@
                     android:layout_marginTop="0dp"
                     android:layout_marginEnd="16dp"
                     android:layout_marginBottom="0dp"
-                    android:text="@string/lbl_pm_personal"
+                    android:text="@string/lbl_pma_personal"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintBottom_toBottomOf="parent"/>
@@ -154,7 +154,7 @@
                     android:layout_marginTop="0dp"
                     android:layout_marginEnd="16dp"
                     android:layout_marginBottom="0dp"
-                    android:text="@string/lbl_pm_contact"
+                    android:text="@string/lbl_pma_contact"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintBottom_toBottomOf="parent"/>
@@ -244,7 +244,7 @@
                     android:layout_marginTop="0dp"
                     android:layout_marginEnd="16dp"
                     android:layout_marginBottom="0dp"
-                    android:text="@string/lbl_pm_account"
+                    android:text="@string/lbl_pma_account"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintBottom_toBottomOf="parent"/>
@@ -336,7 +336,7 @@
                     android:layout_marginTop="0dp"
                     android:layout_marginEnd="16dp"
                     android:layout_marginBottom="0dp"
-                    android:text="@string/lbl_pm_address"
+                    android:text="@string/lbl_pma_address"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintBottom_toBottomOf="parent"/>
