--- a/app/src/main/res/layout/activity_foods_database.xml
+++ b/app/src/main/res/layout/activity_foods_database.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<!-- TODO: Add Top Bar -->
 <!-- TODO: Implement ViewModel Bindings-->
 <!-- TODO: Refine Appearance -->
 
@@ -12,12 +11,30 @@
     android:layout_height="match_parent"
     tools:context=".views.FoodsDatabaseActivity">
 
+    <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/cntAppBarJA"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:fitsSystemWindows="true"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
+
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/barTopBarJA"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:title="@string/lbl_title_foods_view"
+            app:layout_scrollFlags="scroll|enterAlways">
+        </androidx.appcompat.widget.Toolbar>
+    </com.google.android.material.appbar.AppBarLayout>
+
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/cntNavigationFDA"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/cntAppBarJA"
         app:layout_constraintEnd_toEndOf="parent"
         app:tabMode="scrollable">
 
