Separated Legacy Files from Current ones

--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -9,7 +9,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".views.MainActivity">
+    tools:context=".views.legacy.MainActivity">
 
     <fragment
         android:id="@+id/nav_host_main"
