--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".views.StartActivity">
+    tools:context=".views.legacy.StartActivity">
 
     <!-- Top App Bar -->
     <include layout="@layout/bar_app_startup"/>
