--- a/app/src/main/res/layout/bar_app_main.xml
+++ b/app/src/main/res/layout/bar_app_main.xml
@@ -9,7 +9,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:theme="@style/MyTheme.DayNight.AppBarOverlay"
-    tools:context=".views.MainActivity">
+    tools:context=".views.legacy.MainActivity">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar_main"
