--- a/app/src/main/res/layout/bar_app_startup.xml
+++ b/app/src/main/res/layout/bar_app_startup.xml
@@ -9,7 +9,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:fitsSystemWindows="true"
-    tools:context=".views.StartActivity">
+    tools:context=".views.legacy.StartActivity">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar_startup"
