--- a/app/src/main/res/layout/bar_bot_main.xml
+++ b/app/src/main/res/layout/bar_bot_main.xml
@@ -7,7 +7,7 @@
     android:id="@+id/bar_bot_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".views.MainActivity">
+    tools:context=".views.legacy.MainActivity">
 
     <!-- Main content -->
 
