--- a/app/src/main/res/layout/bar_bot_startup.xml
+++ b/app/src/main/res/layout/bar_bot_startup.xml
@@ -7,7 +7,7 @@
     android:id="@+id/bar_bot_startup"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".views.StartActivity">
+    tools:context=".views.legacy.StartActivity">
 
     <!-- Main content -->
 
