--- a/app/src/main/res/layout/content_startup.xml
+++ b/app/src/main/res/layout/content_startup.xml
@@ -9,7 +9,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".views.StartActivity">
+    tools:context=".views.legacy.StartActivity">
 
     <fragment
         android:id="@+id/nav_host_startup"
