--- a/app/src/main/res/layout/fragment_account_management.xml
+++ b/app/src/main/res/layout/fragment_account_management.xml
@@ -7,7 +7,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_marginBottom="56dp"
-    tools:context=".views.AccountManagement">
+    tools:context=".views.legacy.AccountManagement">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
