--- a/app/src/main/res/layout/fragment_account_view.xml
+++ b/app/src/main/res/layout/fragment_account_view.xml
@@ -7,7 +7,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".views.MainActivity">
+    tools:context=".views.legacy.MainActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -126,7 +126,6 @@
                     android:layout_marginStart="@dimen/keyline_0"
                     android:layout_marginEnd="@dimen/keyline_2"
                     android:visibility="visible"
-                    android:onClick="onAccountDeleteButtonClick"
                     app:layout_constraintTop_toBottomOf="@id/account_card_body"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"/>
