--- a/app/src/main/res/layout/fragment_meal_calculator.xml
+++ b/app/src/main/res/layout/fragment_meal_calculator.xml
@@ -8,7 +8,7 @@
     android:layout_height="match_parent"
     android:layout_marginBottom="56dp"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".views.MainActivity">
+    tools:context=".views.legacy.MainActivity">
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/totalCarbsLabelMCF"
