--- a/app/src/main/res/layout/activity_calculator_manage.xml
+++ b/app/src/main/res/layout/activity_calculator_manage.xml
@@ -49,19 +49,33 @@
             android:paddingBottom="@dimen/keyline_1">
 
             <TextView
-                android:id="@+id/lblNutritionDetailsMMA"
+                android:id="@+id/lblNutritionDataLabelsMMA"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/keyline_4"
                 android:layout_marginTop="@dimen/keyline_2"
                 android:layout_marginEnd="@dimen/keyline_4"
                 android:maxLines="10"
-                android:text="@string/food_body"
-                android:textAlignment="viewStart"
+                android:text="@string/food_labels"
                 android:textAppearance="?textAppearanceBody2"
-                app:layout_constraintEnd_toEndOf="parent"
+                android:textAlignment="viewStart"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintEnd_toStartOf="@id/lblNutritionDataValuesMMA" />
+
+            <TextView
+                android:id="@+id/lblNutritionDataValuesMMA"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/keyline_4"
+                android:layout_marginEnd="16dp"
+                android:text="@string/food_values"
+                android:textAppearance="?textAppearanceBody2"
+                android:textAlignment="viewEnd"
+                android:maxLines="10"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@id/lblNutritionDataLabelsMMA"
+                app:layout_constraintBaseline_toBaselineOf="@+id/lblNutritionDataLabelsMMA" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </com.google.android.material.card.MaterialCardView>
 
