Fixed Small Linking Error

--- a/app/src/main/res/layout/layout_food_item.xml
+++ b/app/src/main/res/layout/layout_food_item.xml
@@ -91,7 +91,7 @@
             android:layout_marginStart="@dimen/keyline_4"
             android:layout_marginTop="@dimen/keyline_2"
             android:maxLines="1"
-            android:text="@string/food_body"
+            android:text="@string/food_labels"
             android:textAppearance="?textAppearanceBody2"
             android:textAlignment="viewStart"
             app:layout_constraintTop_toBottomOf="@id/food_card_subtitle"
@@ -105,7 +105,7 @@
             android:layout_marginEnd="@dimen/keyline_4"
             android:layout_marginStart="@dimen/keyline_4"
             android:maxLines="1"
-            android:text="@string/food_body"
+            android:text="@string/food_values"
             android:textAppearance="?textAppearanceBody2"
             android:textAlignment="viewEnd"
             app:layout_constraintBaseline_toBaselineOf="@+id/food_card_body_left"
